--- a/test/.github/workflows/deploy.yml
+++ b/test/.github/workflows/deploy.yml
@@ -37,4 +37,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           branch: gh-pages
-          folder: dist/your-angular-app
+          folder: dist/test
