--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build -- --prod
+        run: npm run build -- --configuration=production
 
   deploy:
     runs-on: ubuntu-latest
