--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         run: npm run build -- --configuration=production
 
       - name: Deploy to GitHub Pages
-        uses: pavan62/github-pages-deploy-action@4.1.5
+        uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          branch: main
+          branch: gh-pages
           folder: dist/test
