--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,97 +1,47 @@
-# name: Deploy to GitHub Pages
-
-# on:
-#   push:
-#     branches:
-#       - main
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v2
-
-#       - name: Set up Node.js
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: '16'
-
-#       - name: Install dependencies
-#         run: npm install
-
-#       - name: Build
-#         run: npm run build -- --configuration=production
-
-#   deploy:
-#     runs-on: ubuntu-latest
-
-#     needs: build
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v2
-#       - name: Install dependencies
-#         run: npm install
-#       - name: Build
-#         run: npm run build -- --configuration=production
-
-#       - name: Deploy to GitHub Pages
-#         uses: JamesIves/github-pages-deploy-action@4.1.5
-#         with:
-#           branch: gh-pages
-#           folder: dist/test
-name: workflow name
+name: Deploy to GitHub Pages
 
 on:
   push:
     branches:
-      - 'master'
+      - main
 
 jobs:
   build:
-    name: Build and Test
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v2
-      - name: Use Node 16.x
-        uses: actions/setup-node@v1
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: '16'
+
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
       - name: Build
-        run: npm run build:ci
-      - name: Test
-        run: npm run test:ci
-      - name: Archive build
-        if: success()
-        uses: actions/upload-artifact@v1
-        with:
-          name: deploy_dist
-          path: dist
-      - name: Archive code coverage result
-        if: success()
-        uses: actions/upload-artifact@v1
-        with:
-          name: deploy_coverage
-          path: coverage
+        run: npm run build -- --configuration=production
+
   deploy:
     runs-on: ubuntu-latest
+
     needs: build
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Download build
-        uses: actions/download-artifact@v1
-        with:
-          name: deploy_dist
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build -- --configuration=production
+
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+        uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
           FOLDER: dist/test
+
 
