--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,77 +1,21 @@
-# name: Deploy to GitHub Pages
+name: CI
 
-# on:
-#   push:
-#     branches:
-#       - main
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v2
-
-#       - name: Set up Node.js
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: '16'
-
-#       - name: Install dependencies
-#         run: npm install
-
-#       - name: Build
-#         run: npm run build -- --configuration=production
-
-#   deploy:
-#     runs-on: ubuntu-latest
-
-#     needs: build
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v2
-#       - name: Install dependencies
-#         run: npm install
-#       - name: Build
-#         run: npm run build -- --configuration=production
-
-#       - name: Deploy to GitHub Pages
-#         uses: JamesIves/github-pages-deploy-action@4.1.5
-#         with:
-#           branch: gh-pages
-#           folder: dist/test
-
-
-
-name: Deploy Angular App to GitHub Pages1
-
-on:
-  push:
-    branches:
-      - master
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Node.js environment
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v1
+      - name: Use Node.js 16.14.0
+        uses: actions/setup-node@v1
         with:
-          node-version: 16
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build the Angular project
-        run: npm run build -- --configuration=production
-
-      - name: Deploy the Angular project to GitHub Pages
-        uses: actions/github-pages@v3
-        with:
-          branch: gh-pages
-          publish-dir: ./dist
+          node-version: 16.14.0
+      - name: Build and Deploy
+        uses: JamesIves/github-pages-deploy-action@releases/v2
+        env:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          BASE_BRANCH: master
+          BRANCH: gh-pages
+          FOLDER: dist/ang-website
+          BUILD_SCRIPT: npm install && npm run build
