--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,54 @@
-name: CI
+# name: CI
 
-on: [push]
+# on: [push]
 
+# jobs:
+#   build:
+
+#     runs-on: ubuntu-18.04
+#     steps:
+#     - uses: actions/checkout@v1
+#     - name: Use Node.js 16
+#       uses: actions/setup-node@v1
+#       with:
+#         node-version: 16
+#     - name: Build and Deploy
+#       uses: JamesIves/github-pages-deploy-action@releases/v2
+#       env:
+#         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+#         BASE_BRANCH: main
+#         BRANCH: gh-pages
+#         FOLDER: dist
+#         BUILD_SCRIPT: npm install && npm run build
+
+name: Build and Deploy
+
+on:
+  push:
+    branches:
+      - master
 jobs:
-  build:
-
-    runs-on: ubuntu-18.04
+  build-and-deploy:
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js 16
-      uses: actions/setup-node@v1
+    - name: Checkout
+      uses: actions/checkout@v1
+    - uses: actions/setup-node@v1 #this installs node and npm for us
       with:
-        node-version: 16
-    - name: Build and Deploy
-      uses: JamesIves/github-pages-deploy-action@releases/v2
-      env:
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BASE_BRANCH: main
+        node-version: '10.x'
+    - uses: actions/cache@v1
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-    
+    - name: Build
+      run: |
+        npm install
+        npm run-script deploy
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      with:
+        GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BRANCH: gh-pages
-        FOLDER: dist
-        BUILD_SCRIPT: npm install && npm run build
+        FOLDER: dist/Portfolio
