--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,54 +1,41 @@
-# name: CI
-
-# on: [push]
-
-# jobs:
-#   build:
-
-#     runs-on: ubuntu-18.04
-#     steps:
-#     - uses: actions/checkout@v1
-#     - name: Use Node.js 16
-#       uses: actions/setup-node@v1
-#       with:
-#         node-version: 16
-#     - name: Build and Deploy
-#       uses: JamesIves/github-pages-deploy-action@releases/v2
-#       env:
-#         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-#         BASE_BRANCH: main
-#         BRANCH: gh-pages
-#         FOLDER: dist
-#         BUILD_SCRIPT: npm install && npm run build
-
 name: Build and Deploy
 
 on:
   push:
     branches:
-      - master
+      - main
+
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-    - uses: actions/setup-node@v1 #this installs node and npm for us
-      with:
-        node-version: '16.x'
-    - uses: actions/cache@v1
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-    
-    - name: Build
-      run: |
-        npm install
-        npm run-script deploy
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@releases/v3
-      with:
-        GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: dist/Portfolio
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '15'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@4.1.5
+        with:
+          branch: main
+          folder: dist/Portfolio  # Replace with your actual folder name
+          token: ${{ secrets.ACCESS_TOKEN }}
